testsuite/tests/properties/invalid_eq/node_entity.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = node == self
}
